Added JWT authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 
+jwt.header=Authorization
+jwt.secret=social-network
+jwt.expiration=604800
