Added follow/unfollow feature.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.show-sql=true
 jwt.header=Authorization
 jwt.secret=social-network
 jwt.expiration=604800
+
+allowed.origin=http://localhost:3000
